[gd_scene load_steps=12 format=3 uid="uid://b6sjienfug7r"]

[ext_resource type="Script" uid="uid://bo7rdnbe33rum" path="res://get_off_bus_minigame.gd" id="1_u8ire"]
[ext_resource type="Script" uid="uid://ewoigt3f7kqv" path="res://doortimer.gd" id="2_l08dc"]
[ext_resource type="Texture2D" uid="uid://dui56fowalicm" path="res://assets/player.png" id="3_u8ire"]
[ext_resource type="Texture2D" uid="uid://cu4ry7pb31pnn" path="res://assets/pink.png" id="4_l08dc"]
[ext_resource type="Script" uid="uid://cfpf2m0i0ki58" path="res://bus.gd" id="5_2qay8"]
[ext_resource type="Texture2D" uid="uid://dgo0lfdu1sjd2" path="res://assets/bus_right.png" id="5_l08dc"]
[ext_resource type="Texture2D" uid="uid://ckcbml8yy2tm7" path="res://assets/getoffbusb.png" id="7_d0q14"]

[sub_resource type="Animation" id="Animation_kdubu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 500)]
}

[sub_resource type="Animation" id="Animation_q6r6c"]
resource_name = "player_out_of_bus"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, 500), Vector2(960, 750)]
}

[sub_resource type="Animation" id="Animation_d0q14"]
resource_name = "thanks"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d21ai"]
_data = {
&"RESET": SubResource("Animation_kdubu"),
&"player_out_of_bus": SubResource("Animation_q6r6c"),
&"thanks": SubResource("Animation_d0q14")
}

[node name="get_off_bus_minigame" type="Node2D"]
script = ExtResource("1_u8ire")

[node name="Getoffbusb" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.5254902)
position = Vector2(960, 540)
texture = ExtResource("7_d0q14")

[node name="Bus" type="Sprite2D" parent="."]
position = Vector2(989, 349)
scale = Vector2(31.375002, 31.375002)
texture = ExtResource("5_l08dc")
script = ExtResource("5_2qay8")
crowdedness = 0.07

[node name="Button" type="Button" parent="."]
offset_left = 1282.0
offset_top = 807.0
offset_right = 1753.0
offset_bottom = 957.0
theme_override_font_sizes/font_size = 50
text = "Get off the bus!!"

[node name="Timer" type="Timer" parent="Button"]
wait_time = 0.25
one_shot = true

[node name="TimerToDoorOpen" type="Timer" parent="." node_paths=PackedStringArray("slider")]
wait_time = 1.047
one_shot = true
script = ExtResource("2_l08dc")
slider = NodePath("HSlider")

[node name="MissedText" type="Label" parent="TimerToDoorOpen"]
visible = false
offset_left = 1338.0
offset_top = 376.0
offset_right = 1756.0
offset_bottom = 456.0
theme_override_font_sizes/font_size = 56
text = "Missed!"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="TimerToDoorOpen"]
offset_left = 1240.0
offset_top = 969.0
offset_right = 1810.0
offset_bottom = 1034.0
step = 0.01
editable = false

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(960, 500)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_u8ire")

[node name="Thanks Bubble" type="Sprite2D" parent="Player"]
visible = false
position = Vector2(50, -50)
scale = Vector2(0.34, 0.34)
texture = ExtResource("4_l08dc")

[node name="Label" type="Label" parent="Player/Thanks Bubble"]
offset_left = -200.0
offset_top = -100.0
offset_right = 144.0
offset_bottom = 10.0
theme_override_font_sizes/font_size = 80
text = "Thanks!!!"

[node name="TimerToStop" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d21ai")
}

[connection signal="stop" from="Bus" to="TimerToDoorOpen" method="_on_stop"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="TimerToDoorOpen" to="." method="_on_timer_to_door_open_timeout"]
[connection signal="timeout" from="TimerToDoorOpen" to="Button" method="_on_timeout"]
[connection signal="timeout" from="TimerToDoorOpen" to="TimerToDoorOpen/MissedText" method="set_visible" binds= [true]]
[connection signal="timeout" from="TimerToStop" to="." method="_on_timer_to_stop_timeout"]
[connection signal="timeout" from="TimerToStop" to="Button" method="_on_stop"]
[connection signal="timeout" from="TimerToStop" to="Bus" method="_stop"]
